{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 3,
  "lineage": "6f7134eb-acaf-6fc3-03fa-c45995df45a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07acb2791766dfb58",
            "arn": "arn:aws:ec2:us-east-1:220657560168:elastic-ip/eipalloc-07acb2791766dfb58",
            "association_id": "eipassoc-035459d7f8eeb972d",
            "domain": "vpc",
            "id": "eipalloc-07acb2791766dfb58",
            "network_border_group": "us-east-1",
            "network_interface": "eni-055c100353e6c632d",
            "private_dns": "ip-10-0-0-124.ec2.internal",
            "private_ip": "10.0.0.124",
            "public_dns": "ec2-54-235-217-6.compute-1.amazonaws.com",
            "public_ip": "54.235.217.6",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "clouddojo-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-nat-eip",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:internet-gateway/igw-00d7d75524dcdea0a",
            "id": "igw-00d7d75524dcdea0a",
            "owner_id": "220657560168",
            "tags": {
              "Name": "clouddojo-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-igw",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "vpc_id": "vpc-0e3bf636c2fd44112"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07acb2791766dfb58",
            "association_id": "eipassoc-035459d7f8eeb972d",
            "connectivity_type": "public",
            "id": "nat-02f7a0a030e329a5f",
            "network_interface_id": "eni-055c100353e6c632d",
            "private_ip": "10.0.0.124",
            "public_ip": "54.235.217.6",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a11ec416f66b73d6",
            "tags": {
              "Name": "clouddojo-nat-gw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-nat-gw",
              "Project": "CloudDojo",
              "Service": "EmailService"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:route-table/rtb-06503a4998befc93e",
            "id": "rtb-06503a4998befc93e",
            "owner_id": "220657560168",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02f7a0a030e329a5f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "clouddojo-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-private-rt",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3bf636c2fd44112"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:route-table/rtb-0f5cc7e480f5fd3e4",
            "id": "rtb-0f5cc7e480f5fd3e4",
            "owner_id": "220657560168",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d7d75524dcdea0a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "clouddojo-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-public-rt",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3bf636c2fd44112"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0874f33cab51738f8",
            "route_table_id": "rtb-06503a4998befc93e",
            "subnet_id": "subnet-01898fc909d771cfb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05687a1b18911667e",
            "route_table_id": "rtb-06503a4998befc93e",
            "subnet_id": "subnet-096942262c745518c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d6e932523cd76c8",
            "route_table_id": "rtb-0f5cc7e480f5fd3e4",
            "subnet_id": "subnet-0a11ec416f66b73d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ead9801398b0262",
            "route_table_id": "rtb-0f5cc7e480f5fd3e4",
            "subnet_id": "subnet-019284b8b6d6a8ee1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:security-group/sg-034ad03455025afe7",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034ad03455025afe7",
            "ingress": [],
            "name": "clouddojo-lambda-sg-production",
            "name_prefix": "",
            "owner_id": "220657560168",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clouddojo-lambda-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-lambda-sg",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3bf636c2fd44112"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:security-group/sg-00f900552c96436fb",
            "description": "Security group for Redis cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f900552c96436fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from Lambda",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034ad03455025afe7"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "clouddojo-redis-sg-production",
            "name_prefix": "",
            "owner_id": "220657560168",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "clouddojo-redis-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-redis-sg",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3bf636c2fd44112"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:subnet/subnet-01898fc909d771cfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01898fc909d771cfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220657560168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clouddojo-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-private-subnet-1",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "vpc_id": "vpc-0e3bf636c2fd44112"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:subnet/subnet-096942262c745518c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096942262c745518c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "220657560168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clouddojo-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-private-subnet-2",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "vpc_id": "vpc-0e3bf636c2fd44112"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:subnet/subnet-0a11ec416f66b73d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a11ec416f66b73d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "220657560168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clouddojo-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-public-subnet-1",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "vpc_id": "vpc-0e3bf636c2fd44112"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:subnet/subnet-019284b8b6d6a8ee1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019284b8b6d6a8ee1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "220657560168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "clouddojo-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-public-subnet-2",
              "Project": "CloudDojo",
              "Service": "EmailService"
            },
            "vpc_id": "vpc-0e3bf636c2fd44112"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220657560168:vpc/vpc-0e3bf636c2fd44112",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f997e49280c4bf3",
            "default_route_table_id": "rtb-0167bc7a0dcfece61",
            "default_security_group_id": "sg-06d025f2e7d7f9875",
            "dhcp_options_id": "dopt-08a5db8b03433a669",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3bf636c2fd44112",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0167bc7a0dcfece61",
            "owner_id": "220657560168",
            "tags": {
              "Name": "clouddojo-vpc-production"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "clouddojo-vpc-production",
              "Project": "CloudDojo",
              "Service": "EmailService"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}